# MICROelec_W

./: CMakeLists.txt  G4MicroElecCapture.cc  G4MicroElecCapture.hh  G4MicroElecElasticModel_new.cc  G4MicroElecMaterialStructure.cc  G4MicroElecSurface.cc  README.md  Stepping.cc  Stepping.hh  action.hh  construction.hh  detector.cc  detector.hh  generator.cc  generator.hh  physics.cc  runaction.cc  runaction.hh  runactionMessenger.cc  runactionMessenger.hh  sim.cc  vis.mac  vis_draw.mac  vis_drawing.mac
MATLAB_scripts/: PostProcess.m  angle_average.m  chargingv2.m  fitting_v2.m  macros.m  weighting.m
MATLAB_scripts/macros150_surface/: E11keV_R0.15um_theta100_phi0.mac  E11keV_R0.15um_theta120_phi0.mac  E11keV_R0.15um_theta140_phi0.mac  E11keV_R0.15um_theta160_phi0.mac  E11keV_R0.15um_theta180_phi0.mac  E13keV_R0.15um_theta100_phi0.mac  E13keV_R0.15um_theta120_phi0.mac  E13keV_R0.15um_theta140_phi0.mac  E13keV_R0.15um_theta160_phi0.mac  E13keV_R0.15um_theta180_phi0.mac  E15keV_R0.15um_theta100_phi0.mac  E15keV_R0.15um_theta120_phi0.mac  E15keV_R0.15um_theta140_phi0.mac  E15keV_R0.15um_theta160_phi0.mac  E15keV_R0.15um_theta180_phi0.mac  E17keV_R0.15um_theta100_phi0.mac  E17keV_R0.15um_theta120_phi0.mac  (+69 more)
include/: G4MicroElecCapture.hh  G4MicroElecLOPhononModel.hh  Stepping.hh  construction.hh  detector.hh  physics.hh  physicsMicroElecNew.hh  runaction.hh  runactionMessenger.hh
src/: G4MicroElecInelasticModel_new.cc  G4MicroElecLOPhononModel.cc  Stepping.cc  action.cc  construction.cc  detector.cc  physics.cc  physicsMircoElecNew.cc  runaction.cc  runactionMessenger.cc
